Make nginx server name configurable

--- a/confs/default.conf
+++ b/confs/default.conf
@@ -6,7 +6,7 @@ server {
 	listen 80 default_server;
 	access_log /var/log/nginx/krimzencom.access.log;
 	error_log /var/log/nginx/krimzencom.error.log;
-	server_name www.krimzen.com localhost;
+	server_name _;
 	listen [::]:80 default_server ipv6only=on;
 	gzip on;
 	gzip_disable "msie6";
