--- a/confs/10-opcache.ini
+++ b/confs/10-opcache.ini
@@ -1,18 +1,15 @@
 ; Recommended php.ini settings
 ; see https://secure.php.net/manual/en/opcache.installation.php
 zend_extension=opcache.so
-
 opcache.enable_cli=1
 opcache.fast_shutdown=1
-
 ; How often to check script timestamps for updates, in seconds. 0 will result in OPcache checking for updates on every request. 
 opcache.revalidate_freq=60
-
+; since we are on docker - disable file update checks
+opcache.validate_timestamps=0
 ; The amount of memory used to store interned strings, in megabytes. This configuration directive is ignored in PHP < 5.3.0. 
 opcache.interned_strings_buffer=8
-
 ; The size of the shared memory storage used by OPcache, in megabytes. 
-opcache.memory_consumption=128
-
-; The maximum number of keys (and therefore scripts) in the OPcache hash table. 
-opcache.max_accelerated_files=4000
+opcache.memory_consumption=192
+; The maximum number of keys (and therefore scripts) in the OPcache hash table. set to a prime number between  { 223, 463, 983, 1979, 3907, 7963, 16229, 32531, 65407, 130987 } 
+opcache.max_accelerated_files=7963
