--- a/confs/default.conf
+++ b/confs/default.conf
@@ -3,9 +3,8 @@ server {
 	server_name _;
 	listen [::]:80 default_server ipv6only=on;
 	gzip on;
-	gzip_disable "msie6";
 	gzip_types text/plain application/xml text/css text/js text/xml application/x-javascript text/javascript application/json application/xml+rss;
-	root /home/site/wwwroot/;
+	root /app/site/;
 	index index.php index.html index.htm;
 	server_tokens off;
 
